<resources>
    <string name="app_name">Sound Bored Soundboard</string>
    <string name="record_save_sounds">RECORD/SAVE SOUNDS</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="main_activity_label">New Record</string>

    <string name="search_edit_box">Search</string>

    <string name="button_start_record_activity">Record New</string>

    <string name="sdcard_readonly">Sorry, the SD Card is mounted as read-only and requires it to be writable.</string>
    <string name="no_sdcard">Cannot run unless you have an SD Card inserted.</string>
    <string name="sdcard_shared">Cannot run while your handset is mounted as a USB device.</string>
    d
    <string name="button_options">Options</string>

    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>

    <string name="edit_intent">Edit</string>

    <string name="time_seconds">seconds</string>

    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_recording">Recording…</string>
    <string name="progress_dialog_saving">Saving…</string>
    <string name="progress_dialog_cancel">Cancel</string>
    <string name="progress_dialog_stop">Stop</string>

    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="save_button">Save</string>

    <string name="menu_save">Save</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_about">About</string>
    <string name="menu_show_all_audio">Show All Audio</string>

    <string name="context_menu_edit">Edit</string>
    <string name="file_save_title">Save As:</string>
    <string name="file_save_button_save">Save</string>
    <string name="file_save_button_cancel">Cancel</string>

    <string name="type_music">Music</string>

    <string name="artist_name">User Samples</string>

    <string name="alert_title_success">Success</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_yes_button">Yes, please!</string>
    <string name="alert_no_button">No, thanks.</string>

    <string name="save_success_message">Saved!</string>
    <string name="play_error">Unable to play this media file</string>
    <string name="no_unique_filename">Unable to find unique filename</string>
    <string name="record_error">Error recording audio</string>
    <string name="too_small_error">Can\'t save a file that small, try making it longer.</string>
    <string name="write_error">Error writing file</string>
    <string name="read_error">Error reading file</string>

    <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>
    <string name="bad_extension_error">Sorry, not yet able to edit files of type</string>
    <string name="no_extension_error">Sorry, can\'t edit a file if it doesn\'t have an extension like .mp3 or .wav</string>
    <string name="app_name">Soundboard</string>
    <string name="record_save_sounds">"    RECORD/SAVE SOUNDS"</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="edit_boar">"EDIT BOARD      "</string>

    <string name="file_access_request_code">FILE_ACCESS_REQUEST_CODE</string>
</resources>
