<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/baseLayout"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="82dp">

        <LinearLayout
            android:id="@+id/layoutMainMenu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="top|center_vertical|center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:gravity="top|center_horizontal"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/textMainMenu"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="bottom"
                android:text="@string/main_menu"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="45sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTextTopButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textEdit"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginBottom="4dp"
                android:gravity="bottom"
                android:text="EDIT LIST"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:visibility="visible" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layoutTopButtons"
            android:layout_width="wrap_content"
            android:layout_height="122dp"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingBottom="2dp"
            android:visibility="visible">

            <ImageButton
                android:id="@+id/imageButtonEdit"

                android:layout_width="135dp"
                android:layout_height="122dp"
                android:padding="4dp"
                android:scaleType="fitXY"
                android:visibility="visible"
                app:srcCompat="@drawable/play_list" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutBottomButtons"
            android:layout_width="wrap_content"
            android:layout_height="122dp"
            android:layout_gravity="center"
            android:gravity="top|fill_vertical|center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonRecord"
                android:layout_width="135dp"
                android:layout_height="122dp"
                android:layout_marginTop="6dp"
                android:background="@android:color/black"
                android:padding="4dp"
                android:paddingBottom="0sp"
                android:scaleType="fitXY"
                android:visibility="visible"
                app:srcCompat="@drawable/microphone" />

            <ImageButton
                android:id="@+id/imageButtonEditBoard"
                android:layout_width="135dp"
                android:layout_height="122dp"
                android:padding="4dp"
                android:scaleType="fitXY"
                android:visibility="visible"
                app:srcCompat="@drawable/color_sound_buttons" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTextBottomButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center_horizontal">


            <TextView
                android:id="@+id/textRecord"
                android:layout_width="150dp"
                android:layout_height="39dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="4dp"
                android:gravity="top|center"
                android:paddingTop="4dp"
                android:text="@string/record_save_sounds"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />


            <TextView
                android:id="@+id/textEditBoard"
                android:layout_width="150dp"
                android:layout_height="39dp"
                android:layout_marginRight="10dp"
                android:text="@string/edit_boar"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>